2009-09-02  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/act-metadata.rb: Do not cache SiteMetadata object.
	* lib/qwik/act-metadata.rb: Do not show page title.

	* lib/qwik/act-metadata.rb: Limit only 10 items per feed.

2009-09-01  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/act-status.rb: Show status action.

	* lib/qwik/db-backup.rb: Disable content of each function.
	* lib/qwik/act-backup.rb: Ditto.
	* lib/qwik/act-history.rb: Ditto.
	* lib/qwik/pages.rb: Ditto.

2009-08-28  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/periodic.rb: Do not cache farm on memory.

2009-08-27  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/qwikweb-adduser.rb: Fix spell miss.
	* lib/qwik/qwik-service.rb: Ditto.

	* lib/qwik/server-memory.rb: Do not cache farm object.

	* lib/qwik/farm.rb: Fix test cases.
	* lib/qwik/act-rrefs.rb: Fix a test case.

2009-08-21  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/db-searchwords.rb: Debug.

2009-08-20  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/farm.rb: Do not cache @sites.

	* super/_PageAttribute.txt: rrefs plugin is disabled.

	* lib/qwik/act-search.rb: Debug for em nil case.

2009-08-19  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/farm.rb: Do not cache Site objects.
	* lib/qwik/act-monitor.rb: Comment outed some tests.
	* lib/qwik/act-wema.rb: Ditto.
	* lib/qwik/act-rrefs.rb: Ditto.

	* lib/qwik/check-many-pages.rb: Update.

2009-07-26  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/check-many-pages.rb: Check performance for many pages.

2009-07-26  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/site.rb: Add require "site-search".
	* lib/qwik/util-webrick.rb: Fix test.
	* lib/qwik/site-member.rb: Ditto.

2009-07-26  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/check-htree-rexml.rb: Delete tests for deprecated method.

2008-12-08  Keiki Shimada  <shimada-k aist.go.jp>
