@@ -5,6 +5,8 @@
 
 	* lib/qwik/act-metadata.rb: Limit only 10 items per feed.
 
+	* lib/qwik/act-metadata.rb: Disable RSS 0.91 and RSS 1.0.
+
 2009-09-01  Kouichirou Eto  <2009@eto.com.nospam.com>
 
 	* lib/qwik/act-status.rb: Show status action.
